--- a/pack/templates/register.html
+++ b/pack/templates/register.html
@@ -16,21 +16,88 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         {{ form.full_name.label(class="bmd-label-floating" ) }}
-                                        {{ form.full_name(class="form-control", type="text") }}
+
+                                        {% if form.full_name.errors %}
+                                            {{ form.full_name(class="form-control", type="text") }}
+                                            <div class="invalid-feedback">
+                                                {% for error in form.full_name.errors %}
+                                                    <span>{{ error }}</span>
+                                                {% endfor %}
+                                            </div>
+                                        {% else %}
+                                            {{ form.full_name(class="form-control", type="text") }}
+                                        {% endif %}
                                     </div>
                                 </div>
+
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         {{ form.registration_number.label(class="bmd-label-floating" ) }}
-                                        {{ form.registration_number(class="form-control", type="text") }}
+
+                                        {% if form.registration_number.errors %}
+                                            {{ form.registration_number(class="form-control", type="text") }}
+                                            <div class="invalid-feedback">
+                                                {% for error in form.registration_number.errors %}
+                                                    <span>{{ error }}</span>
+                                                {% endfor %}
+                                            </div>
+                                        {% else %}
+                                            {{ form.registration_number(class="form-control", type="text") }}
+                                        {% endif %}
                                     </div>
+
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        {{ form.phone_number.label(class="bmd-label-floating" ) }}
-                                        {{ form.phone_number(class="form-control", type="text") }}
+                                        {{ form.email.label(class="bmd-label-floating" ) }}
+
+                                        {% if form.email.errors %}
+                                            {{ form.email(class="form-control", type="text") }}
+                                            <div class="invalid-feedback">
+                                                {% for error in form.email.errors %}
+                                                    <span>{{ error }}</span>
+                                                {% endfor %}
+                                            </div>
+                                        {% else %}
+                                            {{ form.email(class="form-control", type="text") }}
+                                        {% endif %}
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        {{ form.password.label(class="bmd-label-floating" ) }}
+
+                                        {% if form.password.errors %}
+                                            {{ form.password(class="form-control", type="password") }}
+                                            <div class="invalid-feedback">
+                                                {% for error in form.password.errors %}
+                                                    <span>{{ error }}</span>
+                                                {% endfor %}
+                                            </div>
+                                        {% else %}
+                                            {{ form.password(class="form-control", type="password") }}
+                                        {% endif %}
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        {{ form.confirm_password.label(class="bmd-label-floating" ) }}
+
+                                        {% if form.confirm_password.errors %}
+                                            {{ form.confirm_password(class="form-control", type="password") }}
+                                            <div class="invalid-feedback">
+                                                {% for error in form.confirm_password.errors %}
+                                                    <span>{{ error }}</span>
+                                                {% endfor %}
+                                            </div>
+                                        {% else %}
+                                            {{ form.confirm_password(class="form-control", type="password") }}
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
