admin login flash message

--- a/pack/templates/layout.html
+++ b/pack/templates/layout.html
@@ -7,9 +7,11 @@
     <link rel="apple-touch-icon" sizes="76x76"  href= "{{ url_for('static',filename='/img/apple-icon.png') }}">
     <link rel="icon" type="image/png" href="pack/static/img/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>
-        Material Dashboard Dark Edition by Creative Tim
-    </title>
+    {% if title %}
+        <title>Exam & Cats - {{ title }}</title>
+    {% else %}
+        <title>Exam & Cats</title>
+    {% endif %}
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
     <!--     Fonts and icons     -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
