--- a/pack/templates/login.html
+++ b/pack/templates/login.html
@@ -5,8 +5,8 @@
             <div class="col-md-8">
                 <div class="card">
                     <div class="card-header card-header-primary">
-                        <h4 class="card-title">Edit Profile</h4>
-                        <p class="card-category">Complete your profile</p>
+                        <h4 class="card-title">Login</h4>
+                        <p class="card-category">Fill in your info</p>
                     </div>
                     <div class="card-body">
                         <form method="POST" action="">
@@ -28,7 +28,6 @@
                                         {% endif %}
                                     </div>
                                 </div>
-                                </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
@@ -47,10 +46,21 @@
                                         {% endif %}
                                     </div>
                                 </div>
-
                             </div>
-                            <!--button type="submit" >Update Profile</button-->
-                            {{ form.submit(class="btn btn-primary ") }}
+                            <div class="row">
+                                <div class="col-md-6 mt-3">
+                                    <div class="form-group">
+                                        {{ form.remember.label(class="form-check-label") }}
+                                        {{ form.remember(class="form-check-input", type="checkbox", class="filled-in", checked="checked") }}
+                                    </div>
+                                </div>
+                            </div>
+                            {{ form.submit(class="btn btn-primary") }}
+                            <div class="row">
+                            <small class="col-md-6 mt-3 text-muted-50">
+                                Need An Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up Now</a>
+                            </small>
+                            </div>
                             <div class="clearfix"></div>
                         </form>
                     </div>
