--- a/pack/templates/profile.html
+++ b/pack/templates/profile.html
@@ -5,15 +5,13 @@
             <div class="col-md-8">
                 <div class="card">
                     <div class="card-header card-header-primary">
-                        <h4 class="card-title">Edit Profile</h4>
-                        <p class="card-category">Complete your profile</p>
+                        <h4 class="card-title">Update Profile</h4>
                     </div>
                     <div class="card-body">
                         <form method="POST" action="">
-                            {{ form.hidden_tag() }}
+                        {{ form.hidden_tag() }}
                             <div class="row">
-
-                                <div class="col-md-3">
+                                <div class="col-md-6">
                                     <div class="form-group">
                                         {{ form.full_name.label(class="bmd-label-floating" ) }}
 
@@ -48,42 +46,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        {{ form.password.label(class="bmd-label-floating" ) }}
-
-                                        {% if form.password.errors %}
-                                            {{ form.password(class="form-control", type="password") }}
-                                            <div class="invalid-feedback">
-                                                {% for error in form.password.errors %}
-                                                    <span>{{ error }}</span>
-                                                {% endfor %}
-                                            </div>
-                                        {% else %}
-                                            {{ form.password(class="form-control", type="password") }}
-                                        {% endif %}
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        {{ form.confirm_password.label(class="bmd-label-floating" ) }}
-
-                                        {% if form.confirm_password.errors %}
-                                            {{ form.confirm_password(class="form-control", type="password") }}
-                                            <div class="invalid-feedback">
-                                                {% for error in form.confirm_password.errors %}
-                                                    <span>{{ error }}</span>
-                                                {% endfor %}
-                                            </div>
-                                        {% else %}
-                                            {{ form.confirm_password(class="form-control", type="password") }}
-                                        {% endif %}
-                                    </div>
-                                </div>
-                            </div>
-                            <!--button type="submit" >Update Profile</button-->
-                            {{ form.submit(class="btn btn-primary ") }}
+                            <!--button type="submit" class="btn btn-primary pull-right">Update Profile</button-->
+                            {{ form.submit(class="btn btn-primary pull-right") }}
                             <div class="clearfix"></div>
                         </form>
                     </div>
