upload csv works

--- a/pack/templates/layout.html
+++ b/pack/templates/layout.html
@@ -21,10 +21,12 @@
     <!-- CSS Just for demo purpose, don't include it in your project -->
     <link href= "{{ url_for('static',filename='demo/demo.css') }}"/>
 
-    <!--     header for uploading marks form     -->
+    <!--     header for uploading marks form     >
      <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script-->
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='doc.css') }}">
+
 
 </head>
 
