--- a/pack/templates/layout.html
+++ b/pack/templates/layout.html
@@ -27,6 +27,9 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='doc.css') }}">
 
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='table.css') }}">
+
 
 </head>
 
@@ -40,8 +43,8 @@
               Tip 2: you can also add an image using data-image tag
           -->
             <div class="logo">
-                <a href="http://www.creative-tim.com" class="simple-text logo-normal">
-                    Creative Tim
+                <a href="/" class="simple-text logo-normal">
+                    Exam & Cat Marks
                 </a>
             </div>
             <div class="sidebar-wrapper">
