--- a/pack/templates/upload3.html
+++ b/pack/templates/upload3.html
@@ -11,8 +11,8 @@
                             <div class="col-md-6">
                                 <p class="card-category">Upload only .csv file</p>
                             </div>
-                            <div class="col-md-6">
-                                <a class="pull-right " href="{{ url_for('downloadfile') }}">Download .csv template here</a>
+                            <div class="col-md-6 mt-3">
+                                <a class="card-category" href="{{ url_for('downloadfile') }}">Download .csv template here</a>
                             </div>
                         </div>
                     </div>
