--- a/pack/templates/home.html
+++ b/pack/templates/home.html
@@ -3,7 +3,6 @@
     <body class="mt32">
     <div class="container">
         <h3>
-            <span>JavaScript Filter Table Data</span>
             <input  type="text" placeholder="Search..." class="form-control" id="myInput" onkeyup="myFunction()"/>
         </h3>
         <table id="myTable" class="table table-hover table-striped mt32 customers-list">
@@ -16,6 +15,8 @@
                 <th>Cat 1</th>
                 <th>Cat 2</th>
                 <th>Main Exam</th>
+                <th>Total</th>
+                <th>Grade</th>
             </tr>
             </thead>
             <tbody>
@@ -28,6 +29,8 @@
                     <td>{{ post.cat_1 }}</td>
                     <td>{{ post.cat_2 }}</td>
                     <td>{{ post.main_exam }}</td>
+                    <td>{{ post.total }}</td>
+                    <td>{{ post.grade }}</td>
                 </tr>
             {% endfor %}
 
@@ -35,17 +38,7 @@
         </table>
 
     </div>
-    {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
-        {% if page_num %}
-            {% if posts.page == page_num %}
-                <a class="btn btn-info mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
-            {% else %}
-                <a class="btn btn-outline-info mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
-            {% endif %}
-        {% else %}
-            ...
-        {% endif %}
-    {% endfor %}
+
     <script>
         function myFunction() {
             // Declare variables
