--- a/pack/templates/layout.html
+++ b/pack/templates/layout.html
@@ -57,15 +57,15 @@
                     </li-->
 
                     <li class="nav-item ">
-                        <a class="nav-link" href="{{ url_for('upload_csv') }}">
+                        <a class="nav-link" href="{{ url_for('home') }}">
                             <i class="material-icons">content_paste</i>
-                            <p>Table List</p>
+                            <p>Results</p>
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="#">
-                            <i class="material-icons">library_books</i>
-                            <p>Typography</p>
+                        <a class="nav-link" href="{{ url_for('upload_csv') }}">
+                            <i class="material-icons">cloud_upload</i>
+                            <p>Upload Results</p>
                         </a>
                     </li>
                     <li class="nav-item ">
@@ -112,31 +112,6 @@
                 <div class="collapse navbar-collapse justify-content-end">
 
                     <ul class="navbar-nav">
-                        {% if current_user.is_authenticated %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)">
-                                    <i class="material-icons">dashboard</i>
-                                    <p class="d-lg-none d-md-block">
-                                        Stats
-                                    </p>
-                                </a>
-                            </li>
-                        {% endif %}
-                        {% if current_user.is_authenticated %}
-                            <li class="nav-item dropdown">
-                                <a class="nav-link" href="javscript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="material-icons">notifications</i>
-                                    <span class="notification">2</span>
-                                    <p class="d-lg-none d-md-block">
-                                        Some Actions
-                                    </p>
-                                </a>
-                                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="javascript:void(0)">Mike John responded to your email</a>
-                                    <a class="dropdown-item" href="javascript:void(0)">You have 5 new tasks</a>
-                                </div>
-                            </li>
-                        {% endif %}
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="javscript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="material-icons">person</i>
