--- a/pack/templates/profile.html
+++ b/pack/templates/profile.html
@@ -14,17 +14,7 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         {{ form.full_name.label(class="bmd-label-floating" ) }}
-
-                                        {% if form.full_name.errors %}
-                                            {{ form.full_name(class="form-control", type="text") }}
-                                            <div class="invalid-feedback">
-                                                {% for error in form.full_name.errors %}
-                                                    <span>{{ error }}</span>
-                                                {% endfor %}
-                                            </div>
-                                        {% else %}
-                                            {{ form.full_name(class="form-control", type="text") }}
-                                        {% endif %}
+                                        {{ form.full_name(class="form-control bg-transparent text-secondary", type="text") }}
                                     </div>
                                 </div>
                             </div>
@@ -32,17 +22,7 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         {{ form.email.label(class="bmd-label-floating" ) }}
-
-                                        {% if form.email.errors %}
-                                            {{ form.email(class="form-control", type="text") }}
-                                            <div class="invalid-feedback">
-                                                {% for error in form.email.errors %}
-                                                    <span>{{ error }}</span>
-                                                {% endfor %}
-                                            </div>
-                                        {% else %}
-                                            {{ form.email(class="form-control", type="text") }}
-                                        {% endif %}
+                                        {{ form.email(class="form-control bg-transparent text-secondary", type="text") }}
                                     </div>
                                 </div>
                             </div>
