--- a/pack/templates/layout.html
+++ b/pack/templates/layout.html
@@ -65,7 +65,13 @@
                     <li class="nav-item ">
                         <a class="nav-link" href="{{ url_for('upload_csv') }}">
                             <i class="material-icons">cloud_upload</i>
-                            <p>Upload Results</p>
+                            <p>Bulk Results Upload</p>
+                        </a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="{{ url_for('new_single_entry') }}">
+                            <i class="material-icons">cloud_upload</i>
+                            <p>Single Result Upload</p>
                         </a>
                     </li>
                     <li class="nav-item ">
