--- a/pack/templates/login.html
+++ b/pack/templates/login.html
@@ -14,25 +14,25 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        {{ form.email.label(class="bmd-label-floating" ) }}
-                                        {{ form.email(class="form-control", type="text") }}
+                                        {{ form.email.label(class="bmd-label-floating text-white" ) }}
+                                        {{ form.email(class="form-control bg-transparent", type="text") }}
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        {{ form.password.label(class="bmd-label-floating" ) }}
+                                        {{ form.password.label(class="bmd-label-floating text-white" ) }}
 
                                         {% if form.password.errors %}
-                                            {{ form.password(class="form-control", type="password") }}
+                                            {{ form.password(class="form-control bg-transparent", type="password") }}
                                             <div class="invalid-feedback">
                                                 {% for error in form.password.errors %}
                                                     <span>{{ error }}</span>
                                                 {% endfor %}
                                             </div>
                                         {% else %}
-                                            {{ form.password(class="form-control", type="password") }}
+                                            {{ form.password(class="form-control bg-transparent", type="password") }}
                                         {% endif %}
                                     </div>
                                 </div>
@@ -47,9 +47,9 @@
                             </div>
                             {{ form.submit(class="btn btn-primary") }}
                             <div class="row">
-                            <small class="col-md-6 mt-3 text-muted-50">
-                                Need An Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up Now</a>
-                            </small>
+                                <small class="col-md-6 mt-3 text-muted-50">
+                                    Need An Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up Now</a>
+                                </small>
                             </div>
                             <div class="clearfix"></div>
                         </form>
