--- a/pack/templates/upload.html
+++ b/pack/templates/upload.html
@@ -8,7 +8,7 @@
                         <h4 class="card-title">Login</h4>
                         <div class="row">
                             <div class="col-md-6">
-                                <p class="card-category">Upload only .csv file</p>
+                                <p class="card-category">Upload only .csv file(<10mb)</p>
                             </div>
                             <div class="col-md-6">
                                 <a class="card-category" href="{{ url_for('downloadfile') }}">Download .csv template here
