--- a/pack/templates/layout.html
+++ b/pack/templates/layout.html
@@ -75,9 +75,9 @@
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="{{ url_for('register_student') }}">
                             <i class="material-icons">bubble_chart</i>
-                            <p>Icons</p>
+                            <p>Register Student</p>
                         </a>
                     </li>
                     <li class="nav-item ">
