--- a/pack/templates/student.html
+++ b/pack/templates/student.html
@@ -3,9 +3,10 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-8">
-                <div class="card">
+                <div id="transcript" class="card">
                     <div class="card-header card-header-primary">
                         <h4 class="card-title">{{ student.student_name }}</h4>
+                        <h6 class="card-title">Admission Number: {{ student.admission_number }}</h6>
                     </div>
                     <div class="card-body">
                         <table id="myTable" class="table table-hover table-striped mt32 customers-list">
@@ -38,6 +39,7 @@
                         </table>
                     </div>
                 </div>
+                <a class="btn btn-primary" href="javascript:print()" role="button">Print Transcript</a>
             </div>
         </div>
     </div>
