--- a/pack/templates/upload.html
+++ b/pack/templates/upload.html
@@ -35,7 +35,9 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label class="bmd-label-floating" for="unit_code">Unit Code</label>
-                                        <input class="form-control" type="text" name="unit_code">
+                                        <label>
+                                            <input class="form-control" type="text" name="unit_code">
+                                        </label>
                                     </div>
                                 </div>
 
