--- a/pack/templates/layout.html
+++ b/pack/templates/layout.html
@@ -244,6 +244,12 @@
 <script src="/static/demo/demo.js"></script>
 <!-- Print Transcript -->
 <script lang="javascript" type="text/javascript" src="/static/print_transcript.js"></script>
+<!-- Calculate Total and Grade -->
+<script lang="javascript" type="text/javascript" src="/static/total_grade_calculator.js"></script>
+<!-- onblur -->
+<script lang="javascript" type="text/javascript" src="/static/onblur.js"></script>
+<!-- name filler -->
+<!--script lang="javascript" type="text/javascript" src="/static/filler.js"></script-->
 <script>
     $(document).ready(function() {
         $().ready(function() {
