--- a/pack/templates/register.html
+++ b/pack/templates/register.html
@@ -16,7 +16,7 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         {{ form.full_name.label(class="bmd-label-floating" ) }}
-                                        {{ form.full_name(class="form-control bg-transparent text-secondary", type="text") }}
+                                        {{ form.full_name(class="form-control bg-transparent text-white", type="text", id="fname", onblur="myFunction()") }}
                                     </div>
                                 </div>
                             </div>
@@ -24,7 +24,7 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         {{ form.email.label(class="bmd-label-floating" ) }}
-                                        {{ form.email(class="form-control bg-transparent text-secondary", type="email") }}
+                                        {{ form.email(class="form-control bg-transparent text-white", type="email", id="fname", onblur="myFunction()") }}
                                     </div>
                                 </div>
                             </div>
