--- a/pack/templates/student_register.html
+++ b/pack/templates/student_register.html
@@ -15,13 +15,13 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         {{ form.full_name.label(class="bmd-label-floating text-white" ) }}
-                                        {{ form.full_name(class="form-control bg-transparent text-white", type="text") }}
+                                        {{ form.full_name(class="form-control bg-transparent text-white", type="text", id="fname", onblur="myFunction()") }}
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         {{ form.admission_number.label(class="bmd-label-floating text-white" ) }}
-                                        {{ form.admission_number(class="form-control bg-transparent text-white", type="text") }}
+                                        {{ form.admission_number(class="form-control bg-transparent text-white", type="text", id="fname", onblur="myFunction()") }}
                                     </div>
                                 </div>
                             </div>
