--- a/pack/templates/layout.html
+++ b/pack/templates/layout.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="pack/static/img/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     {% if title %}
-        <title>Exam & Cats - {{ title }}</title>
+        <title >Exam & Cats - {{ title }}</title>
     {% else %}
         <title>Exam & Cats</title>
     {% endif %}
@@ -30,6 +30,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='table.css') }}">
 
+    <!--glowing text-->
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='glow.css') }}">
+
 
 </head>
 
@@ -42,7 +45,7 @@
 
               Tip 2: you can also add an image using data-image tag
           -->
-            <div class="logo">
+            <div class="logo glow">
                 <a href="/" class="simple-text logo-normal">
                     Exam & Cat Marks
                 </a>
